syntax = "proto3";

package com.academy.fintech.processing;

option java_multiple_files = true;

service ProcessingService {
  rpc processing (ProcessingRequest) returns (ProcessingResponse);
}

message ProcessingRequest {
  string agreementId = 1;
  int32 amountPayment = 2;
}

message ProcessingResponse {
  optional string errorMessage = 1;
}